# OpenGL_Sandbox

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  cppGenerator.py  run.sh
Core/: Application.h  Buffer.h  Shader.h  Types.h  Window.h
Platform/OpenGL/: OpenGL_App.cpp  OpenGL_App.h  OpenGL_Application.cpp  OpenGL_Application.h  OpenGL_Buffer.cpp  OpenGL_Buffer.h  OpenGL_Shader.cpp  OpenGL_Shader.h  OpenGL_Window.cpp  OpenGL_Window.h  Shader.cpp  Shader.h  Window.cpp  Window.h
Sandbox/: main.cpp
Util/: VertexGenerator.cpp
builds/: Makefile
builds/Exe/: test
includes/GLAD/: glad.h
includes/freetypeinc/: ft2build.h
lib/mac/: libfreetype.6.dylib
res/Shaders/: basic.shader  frag.shader  ver.shader
src/: glad.cpp  main.cpp
src/Helpers/: Shader.h  Window.h
